tests/should-fail/set-type1.j
type unit extends handle

function test takes nothing returns nothing
    local unit u
    set unit u = null
endfunction
